--- a/index.html
+++ b/index.html
@@ -12,19 +12,19 @@
       <h1 class="text-4xl font-bold text-center mb-10">Família Abreu</h1>
       <div class="grid gap-6 md:grid-cols-2 lg:grid-cols-3">
         <div class="bg-gray-800 rounded-lg overflow-hidden shadow-lg">
-          <img src="images/foto1.jpg" alt="Família" class="w-full h-64 object-cover" />
+          <img src="images/foto1.jpeg" alt="Família" class="w-full h-64 object-cover" />
           <div class="p-4">
             <p class="text-sm text-gray-300">Um momento inesquecível juntos.</p>
           </div>
         </div>
         <div class="bg-gray-800 rounded-lg overflow-hidden shadow-lg">
-          <img src="images/foto2.jpg" alt="Família" class="w-full h-64 object-cover" />
+          <img src="images/foto2.jpeg" alt="Família" class="w-full h-64 object-cover" />
           <div class="p-4">
             <p class="text-sm text-gray-300">Sorrisos que aquecem o coração.</p>
           </div>
         </div>
         <div class="bg-gray-800 rounded-lg overflow-hidden shadow-lg">
-          <img src="images/foto3.jpg" alt="Família" class="w-full h-64 object-cover" />
+          <img src="images/foto3.jpeg" alt="Família" class="w-full h-64 object-cover" />
           <div class="p-4">
             <p class="text-sm text-gray-300">Nossa história, nosso orgulho.</p>
           </div>
