--- a/index.html
+++ b/index.html
@@ -1,35 +1,158 @@
-
 <!DOCTYPE html>
-<html lang="pt-br">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Família Abreu</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-  </head>
-  <body class="bg-gray-900 text-white font-sans">
-    <div class="container mx-auto px-4 py-10">
-      <h1 class="text-4xl font-bold text-center mb-10">Família Abreu</h1>
-      <div class="grid gap-6 md:grid-cols-2 lg:grid-cols-3">
-        <div class="bg-gray-800 rounded-lg overflow-hidden shadow-lg">
-          <img src="images/foto1.jpeg" alt="Família" class="w-full h-64 object-cover" />
-          <div class="p-4">
-            <p class="text-sm text-gray-300">Um momento inesquecível juntos.</p>
-          </div>
-        </div>
-        <div class="bg-gray-800 rounded-lg overflow-hidden shadow-lg">
-          <img src="images/foto2.jpeg" alt="Família" class="w-full h-64 object-cover" />
-          <div class="p-4">
-            <p class="text-sm text-gray-300">Sorrisos que aquecem o coração.</p>
-          </div>
-        </div>
-        <div class="bg-gray-800 rounded-lg overflow-hidden shadow-lg">
-          <img src="images/foto3.jpeg" alt="Família" class="w-full h-64 object-cover" />
-          <div class="p-4">
-            <p class="text-sm text-gray-300">Nossa história, nosso orgulho.</p>
-          </div>
-        </div>
+<html lang="pt-BR">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Minha Família, Minha Vida!</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Segoe UI', sans-serif;
+      background: linear-gradient(to bottom, #f9f9f9, #e6e6e6);
+      color: #333;
+    }
+
+    header {
+      background-color: #002856;
+      color: white;
+      padding: 60px 20px;
+      text-align: center;
+      transition: background-color 0.5s;
+    }
+
+    header:hover {
+      background-color: #005ca9;
+    }
+
+    header h1 {
+      font-size: 3rem;
+      margin: 0;
+    }
+
+    header p {
+      font-size: 1.2rem;
+      margin-top: 10px;
+    }
+
+    .section {
+      padding: 60px 20px;
+      max-width: 1000px;
+      margin: auto;
+    }
+
+    .gallery {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 20px;
+      transition: all 0.5s ease-in-out;
+    }
+
+    .gallery img {
+      width: 100%;
+      border-radius: 12px;
+      box-shadow: 0 10px 20px rgba(0,0,0,0.1);
+      transition: transform 0.3s, box-shadow 0.3s;
+    }
+
+    .gallery img:hover {
+      transform: scale(1.03);
+      box-shadow: 0 12px 24px rgba(0,0,0,0.2);
+    }
+
+    .timeline {
+      border-left: 4px solid #002856;
+      padding-left: 20px;
+    }
+
+    .timeline-entry {
+      margin-bottom: 30px;
+    }
+
+    .timeline-entry h3 {
+      margin: 0;
+      color: #005ca9;
+    }
+
+    .video-wrapper {
+      margin-top: 40px;
+      display: flex;
+      justify-content: center;
+    }
+
+    video {
+      width: 100%;
+      max-width: 800px;
+      border-radius: 12px;
+      box-shadow: 0 8px 16px rgba(0,0,0,0.15);
+    }
+
+    footer {
+      background-color: #002856;
+      color: white;
+      text-align: center;
+      padding: 20px;
+      font-size: 1.1rem;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>Minha Família, minha Vida!</h1>
+    <p>Homenagem aos meus amores Thaís, Cláudia, Thiago Luiz, Miguel e Aurora!</p>
+  </header>
+
+  <section class="section">
+    <h2>Galeria de Momentos</h2>
+    <div class="gallery">
+      <img src="images/3C40D098-C5FC-49F1-98FD-7E026A4C3433_1_105_c.jpeg" alt="Família 1">
+      <img src="images/658ED486-EF99-45A7-AB14-A6C7B10DBA18_1_102_o.jpeg" alt="Família 2">
+      <img src="images/BDD5382B-4F33-4A21-9E18-50F6924FF003_1_105_c.jpeg" alt="Família 3">
+      <img src="images/FD979BF1-E1F0-4D06-8844-1250705881AD_1_105_c.jpeg" alt="Família 4">
+      <img src="images/E879D0A0-FECA-4C5F-981C-CF8581E89900_1_105_c.jpeg" alt="Família 3">
+      <img src="images/EA450623-B200-4DC0-B387-9EB908BBE181_1_105_c.jpeg" alt="Família 4">
+    </div>
+  </section>
+
+    <section class="section">
+    <h2>Vídeo da Família</h2>
+    <div class="video-wrapper">
+      <video controls poster="https://source.unsplash.com/featured/?family">
+        <source src="/images/Retratos - Ao Longo dos Anos.mov" type="video/mp4">
+        Seu navegador não suporta a tag de vídeo.
+      </video>
+    </div>
+  </section>
+
+  
+  <section class="section">
+    <h2>Nossa História</h2>
+    <div class="timeline">
+      <div class="timeline-entry">
+        <h3>2012</h3>
+        <p>Conheço o amor da minha vida.</p>
+      </div>
+      <div class="timeline-entry">
+        <h3>2014</h3>
+        <p>Nasce nossa primeira princesa, Claudinha.</p>
+      </div>
+      <div class="timeline-entry">
+        <h3>2015</h3>
+        <p>Chegada do nosso príncipe Thiaguinho.</p>
+      </div>
+      <div class="timeline-entry">
+        <h3>2019</h3>
+        <p>Chegada de mais um herdeiro, Miguel.</p>
+      </div>
+      <div class="timeline-entry">
+        <h3>2025</h3>
+        <p>Chegada de mais uma princesa, Aurora.</p>
       </div>
     </div>
-  </body>
+  </section>
+
+
+  <footer>
+    Com amor, respeito e história — Família Abreu.
+  </footer>
+</body>
 </html>
